--- a/src/pages/installation.astro
+++ b/src/pages/installation.astro
@@ -38,7 +38,6 @@ import CodeBlock from "../components/CodeBlock.astro";
                     <li>
                       • Configuración de políticas de venta y términos de uso
                     </li>
-                    <li>• Ajustes de moneda y configuración regional</li>
                   </ul>
                 </div>
               </div>
@@ -84,9 +83,7 @@ import CodeBlock from "../components/CodeBlock.astro";
                     Métodos de Pago Disponibles:
                   </h4>
                   <ul class="text-purple-800 space-y-1">
-                    <li>
-                      • Tarjetas de crédito y débito (Visa, Mastercard, Diners)
-                    </li>
+                    <li>• Tarjetas de crédito y débito (Visa, Mastercard, Diners)</li>
                     <li>• Transferencias bancarias</li>
                     <li>• Pago contra entrega</li>
                     <li>• Billeteras digitales (PagoPlux, DataFast)</li>
@@ -109,7 +106,6 @@ import CodeBlock from "../components/CodeBlock.astro";
                 </div>
               </div>
             </div>
-
             <div class="flex items-start space-x-4">
               <div class="flex-1">
                 <h3 class="text-xl font-semibold text-gray-900 mb-3">
