--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -91,7 +91,7 @@ import FeatureCard from "../components/FeatureCard.astro";
     </div>
   </section>
 
-  <section class="py-16">
+  <!-- <section class="py-16">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div
         class="bg-blue-600 rounded-2xl p-8 text-center text-white animate-on-scroll"
@@ -122,7 +122,7 @@ import FeatureCard from "../components/FeatureCard.astro";
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 </Layout>
 
 <style>
