--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -3,7 +3,8 @@ const { currentPage } = Astro.props;
 
 const menuItems = [
   { href: "/", label: "Inicio", id: "home" },
-  { href: "/installation", label: "Instalación", id: "installation" },
+  { href: "/caracteristicas", label: "Características", id: "caracteristicas" },
+  { href: "/implementacion", label: "Implementación", id: "implementacion" },
   // { href: "/api", label: "API Reference", id: "api" },
   // { href: "/components", label: "Componentes", id: "components" },
 ];
@@ -20,7 +21,7 @@ const menuItems = [
 
 <aside
   id="sidebar"
-  class="fixed left-0 top-16 h-full w-64 bg-white border-r border-gray-200 overflow-y-auto
+  class="fixed left-0 top-16  w-64 bg-white border-r border-gray-200 overflow-y-auto
          transform -translate-x-full transition-transform duration-300 ease-in-out
          md:translate-x-0 md:static md:block"
 >
@@ -42,7 +43,7 @@ const menuItems = [
       }
     </div>
 
-    <div class="mt-8 pt-8 border-t border-gray-200">
+    <!-- <div class="mt-8 pt-8 border-t border-gray-200">
       <h3
         class="text-xs font-semibold text-gray-500 uppercase tracking-wide mb-3"
       >
@@ -51,11 +52,12 @@ const menuItems = [
       <div class="space-y-1">
         <a
           href="https://ecommerce-demo.com"
+          target="_blank"
           class="block px-3 py-2 text-sm text-gray-700 hover:text-blue-600"
           >Demo en Vivo</a
         >
       </div>
-    </div>
+    </div> -->
   </nav>
 </aside>
 
