--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Footer from '../components/Footer.astro';
+
 export interface Props {
   title: string;
 }
@@ -18,7 +20,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>{title}</title>
   </head>
-  <body class="bg-white">
+  <body class="bg-gray-300">
     <nav class="bg-white border-b border-gray-200 fixed w-full z-50 top-0">
       <div class="mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16">
@@ -36,18 +38,19 @@ const { title } = Astro.props;
           </div>
 
           <div class="hidden md:flex items-center space-x-4">
-            <a
+            <!-- <a
               href="/"
               class="text-gray-900 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium"
             >
               Inicio
-            </a>
+            </a> -->
 
             <a
-              href="https://github.com/perseo/ecommerce"
-              class="bg-gray-900 text-white px-4 py-2 rounded-md text-sm font-medium hover:bg-gray-800"
+              href="https://ecommerce-demo.com"
+              target="_blank"
+              class="bg-blue-600 text-white px-4 py-2 rounded-md text-sm font-medium hover:bg-gray-800"
             >
-              GitHub
+              Demo
             </a>
           </div>
         </div>
@@ -57,6 +60,7 @@ const { title } = Astro.props;
     <div class="pt-16">
       <slot />
     </div>
+    <Footer />
   </body>
 </html>
 
