--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -12,7 +12,7 @@ const menuItems = [
 
 <button
   id="btnToggleSidebar"
-  class="md:hidden fixed top-4 left-4 p-2 bg-gray-100 rounded z-50"
+  class="md:hidden fixed top-4 left-4 p-2 bg-gray-100 rounded z-20"
   style="padding: 4px 10px;"
   aria-label="Toggle sidebar"
 >
@@ -21,12 +21,12 @@ const menuItems = [
 
 <aside
   id="sidebar"
-  class="fixed left-0 top-16  w-64 bg-white border-r border-gray-200 overflow-y-auto
+  class="h-full fixed left-0 top-16 w-64 bg-white border-r border-gray-200 overflow-y-auto
          transform -translate-x-full transition-transform duration-300 ease-in-out
          md:translate-x-0 md:static md:block"
 >
   <nav class="p-6">
-    <div class="space-y-1">
+    <div class="h-full">
       {
         menuItems.map((item) => (
           <a
