fix: update footer link to point to the correct URL

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import FooterSocialLink from "./FooterSocialLink.astro";
           © <span id="current-year"></span> Perseo Ecommerce Documentación. Creado Por
           <a
             class="rounded-lg font-medium underline underline-offset-2 outline-hidden ring-zinc-500 transition duration-300 hover:text-neutral-700 hover:decoration-dashed focus:outline-hidden focus-visible:ring-3  "
-            href="https://perseo.ec"
+            href="https://empresarios365.com"
             target="_blank"
             rel="noopener noreferrer">PERSEO</a
           >.
