--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,30 +1,29 @@
----
-import FooterSocialLink from "./FooterSocialLink.astro";
----
-<footer class="w-full bg-neutral-300 ">
-  <div
-    class="w-full px-6 py-2"
-  >
+<footer class="w-full bg-neutral-300">
+  <div class="w-full px-6 py-2">
     <div
       class="grid gap-y-2 sm:flex sm:items-center sm:justify-between sm:gap-y-0"
     >
       <div class="flex items-center justify-between gap-x-5">
-        <p class="text-sm text-gray-800 ">
-          © <span id="current-year"></span> Perseo Ecommerce Documentación. Creado Por
+        <p class="text-sm text-gray-800">
+          © <span id="current-year"></span> Perseo Ecommerce Documentación. Creado
+          Por
           <a
-            class="rounded-lg font-medium underline underline-offset-2 outline-hidden ring-zinc-500 transition duration-300 hover:text-neutral-700 hover:decoration-dashed focus:outline-hidden focus-visible:ring-3  "
+            class="rounded-lg font-medium underline underline-offset-2 outline-hidden ring-zinc-500 transition duration-300 hover:text-neutral-700 hover:decoration-dashed focus:outline-hidden focus-visible:ring-3"
             href="https://empresarios365.com"
             target="_blank"
             rel="noopener noreferrer">PERSEO</a
           >.
         </p>
-        <a class="text-gray-800 hover:text-blue-600 hover:underline" href="https://ecommerce-demo.com/" target="_blank" rel="noopener noreferrer">Perseo Ecommerce Demo</a>
+        <a
+          class="text-gray-800 hover:text-blue-600 hover:underline"
+          href="https://ecommerce-demo.com/"
+          target="_blank"
+          rel="noopener noreferrer">Perseo Ecommerce Demo</a
+        >
       </div>
 
       <!-- Social Brands -->
-      <div>
-       
-      </div>
+      <div></div>
     </div>
 
     <script>
