--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Footer from '../components/Footer.astro';
+import Footer from "../components/Footer.astro";
 
 export interface Props {
   title: string;
@@ -80,7 +80,7 @@ const { title } = Astro.props;
       Courier New,
       monospace;
   }
-  
+
   .hover-lift-alt {
     position: relative;
     overflow: hidden;
