--- a/src/pages/clientes/[id]/index.astro
+++ b/src/pages/clientes/[id]/index.astro
@@ -37,7 +37,7 @@ const proyectos = await getProyectosByCliente(id);
         
         <!-- Información del Cliente -->
         <div class="lg:col-span-1">
-          <div class="bg-white rounded-lg shadow-sm border border-gray-100 p-9 sticky top-[70px]  ">
+          <div class="bg-white rounded-lg shadow-sm border border-gray-100 p-9 sticky top-[70px] h-full">
             <div class="flex items-center gap-3 mb-4">
               <div class="w-12 h-12 bg-gray-100 rounded-full flex items-center justify-center">
                 <svg class="w-6 h-6 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
